Fix footer layout issues.

--- a/assets/css/frontend.css
+++ b/assets/css/frontend.css
@@ -694,8 +694,19 @@ html {
 }
 
 #footer-widgets {
+  align-items: start;
   list-style: none;
   padding-left: unset;
+}
+@media (min-width: 768px) {
+  #footer-widgets > * {
+    max-width: 33.3333%;
+  }
+}
+@media (min-width: 576px) {
+  #footer-widgets > * {
+    max-width: 50%;
+  }
 }
 
 .footer-meta {
