--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -12,8 +12,21 @@
 }
 
 #footer-widgets {
+  align-items: start;
   list-style: none;
   padding-left: unset;
+
+  @media (min-width: $breakpoint-md) {
+    > * {
+      max-width: 33.3333%;
+    }
+  }
+
+  @media (min-width: $breakpoint-sm) {
+    > * {
+      max-width: 50%;
+    }
+  }
 }
 
 .footer-meta {
